Working initial websocket server

--- a/spa/index.html
+++ b/spa/index.html
@@ -20,8 +20,7 @@
     />
   </head>
   <body>
-    <div id="root"></div>
-
+    <div id="slot"></div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
